--- a/notebooks/IS-Data.ipynb
+++ b/notebooks/IS-Data.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 数据处理专用"
+    "# 数据处理专用\n",
+    "整合数据"
    ],
    "metadata": {
     "collapsed": false
@@ -14,7 +15,13 @@
    "execution_count": 1,
    "outputs": [],
    "source": [
-    "import cudf"
+    "import cudf\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 自行编写的包\n",
+    "sys.path.append('/home/ubuntu/notebooks/pycharm_projects/Investor-Sentiment')\n",
+    "sys.path.append('/usr/local/stata17/utilities')"
    ],
    "metadata": {
     "collapsed": false
@@ -22,21 +29,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
-      "text/plain": "   ﻿SgnYear  Dnum NDnum     DMB     NDMB      PDND  LogPDND\n0      1991     1    14  0.6049   4.8106   -4.2057  -0.9005\n1      1992     4    72  2.4407   4.5652   -2.1245  -0.2720\n2      1993    42   182  2.2759   2.6085   -0.3325  -0.0592\n3      1994   160   193  1.3538   1.7117   -0.3578  -0.1019\n4      1995   265   116  1.0813   1.1420   -0.0607  -0.0237\n5      1996   239   357  1.8867   2.1904   -0.3038  -0.0648\n6      1997   215   599  2.1294   2.4667   -0.3373  -0.0639\n7      1998   283   638  2.0322   2.2689   -0.2367  -0.0479\n8      1999   304   719  2.2116   2.4395   -0.2278  -0.0426\n9      2000   353   818  2.9219   3.6668   -0.7449  -0.0986\n10     2001   777   470  2.3160   3.0632   -0.7472  -0.1214\n11     2002   743   560  1.7153   2.2822   -0.5669  -0.1240\n12     2003   679   688  1.3655   1.5618   -0.1963  -0.0583\n13     2004   674   783  1.0758   1.1857   -0.1099  -0.0422\n14     2005   785   659  0.8572   0.9100   -0.0528  -0.0260\n15     2006   672   801  1.3098   3.9957   -2.6859  -0.4844\n16     2007   764   781  2.8963   3.4932   -0.5969  -0.0814\n17     2008   855   810  1.1291   1.4735   -0.3445  -0.1156\n18     2009   900   863  2.2522  61.2571  -59.0050  -1.4346\n19     2010  1069  1025  2.5991   5.4130   -2.8139  -0.3186\n20     2011  1387   983  1.5468   2.3853   -0.8386  -0.1881\n21     2012  1736   796  1.4306   2.5759   -1.1453  -0.2554\n22     2013  1857   656  1.7662   2.8644   -1.0981  -0.2100\n23     2014  1936   617  2.0459   4.6196   -2.5738  -0.3537\n24     2015  2037   697  3.4264   6.7271   -3.3007  -0.2930\n25     2016  2080   924  2.6078   4.2670   -1.6592  -0.2139\n26     2017  2582   839  2.0386   3.0191   -0.9805  -0.1705\n27     2018  2937   718  1.3863   2.0359   -0.6495  -0.1669\n28     2019  2799  1042  1.7314   2.2075   -0.4761  -0.1055\n29     2020  2914  1342  2.1411   2.2787   -0.1376  -0.0270\n30     2021  3258  1429  2.3111   2.4866   -0.1755  -0.0318",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>﻿SgnYear</th>\n      <th>Dnum</th>\n      <th>NDnum</th>\n      <th>DMB</th>\n      <th>NDMB</th>\n      <th>PDND</th>\n      <th>LogPDND</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1991</td>\n      <td>1</td>\n      <td>14</td>\n      <td>0.6049</td>\n      <td>4.8106</td>\n      <td>-4.2057</td>\n      <td>-0.9005</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1992</td>\n      <td>4</td>\n      <td>72</td>\n      <td>2.4407</td>\n      <td>4.5652</td>\n      <td>-2.1245</td>\n      <td>-0.2720</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1993</td>\n      <td>42</td>\n      <td>182</td>\n      <td>2.2759</td>\n      <td>2.6085</td>\n      <td>-0.3325</td>\n      <td>-0.0592</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1994</td>\n      <td>160</td>\n      <td>193</td>\n      <td>1.3538</td>\n      <td>1.7117</td>\n      <td>-0.3578</td>\n      <td>-0.1019</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1995</td>\n      <td>265</td>\n      <td>116</td>\n      <td>1.0813</td>\n      <td>1.1420</td>\n      <td>-0.0607</td>\n      <td>-0.0237</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>1996</td>\n      <td>239</td>\n      <td>357</td>\n      <td>1.8867</td>\n      <td>2.1904</td>\n      <td>-0.3038</td>\n      <td>-0.0648</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>1997</td>\n      <td>215</td>\n      <td>599</td>\n      <td>2.1294</td>\n      <td>2.4667</td>\n      <td>-0.3373</td>\n      <td>-0.0639</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>1998</td>\n      <td>283</td>\n      <td>638</td>\n      <td>2.0322</td>\n      <td>2.2689</td>\n      <td>-0.2367</td>\n      <td>-0.0479</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>1999</td>\n      <td>304</td>\n      <td>719</td>\n      <td>2.2116</td>\n      <td>2.4395</td>\n      <td>-0.2278</td>\n      <td>-0.0426</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>2000</td>\n      <td>353</td>\n      <td>818</td>\n      <td>2.9219</td>\n      <td>3.6668</td>\n      <td>-0.7449</td>\n      <td>-0.0986</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>2001</td>\n      <td>777</td>\n      <td>470</td>\n      <td>2.3160</td>\n      <td>3.0632</td>\n      <td>-0.7472</td>\n      <td>-0.1214</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>2002</td>\n      <td>743</td>\n      <td>560</td>\n      <td>1.7153</td>\n      <td>2.2822</td>\n      <td>-0.5669</td>\n      <td>-0.1240</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>2003</td>\n      <td>679</td>\n      <td>688</td>\n      <td>1.3655</td>\n      <td>1.5618</td>\n      <td>-0.1963</td>\n      <td>-0.0583</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>2004</td>\n      <td>674</td>\n      <td>783</td>\n      <td>1.0758</td>\n      <td>1.1857</td>\n      <td>-0.1099</td>\n      <td>-0.0422</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>2005</td>\n      <td>785</td>\n      <td>659</td>\n      <td>0.8572</td>\n      <td>0.9100</td>\n      <td>-0.0528</td>\n      <td>-0.0260</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>2006</td>\n      <td>672</td>\n      <td>801</td>\n      <td>1.3098</td>\n      <td>3.9957</td>\n      <td>-2.6859</td>\n      <td>-0.4844</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>2007</td>\n      <td>764</td>\n      <td>781</td>\n      <td>2.8963</td>\n      <td>3.4932</td>\n      <td>-0.5969</td>\n      <td>-0.0814</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>2008</td>\n      <td>855</td>\n      <td>810</td>\n      <td>1.1291</td>\n      <td>1.4735</td>\n      <td>-0.3445</td>\n      <td>-0.1156</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>2009</td>\n      <td>900</td>\n      <td>863</td>\n      <td>2.2522</td>\n      <td>61.2571</td>\n      <td>-59.0050</td>\n      <td>-1.4346</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>2010</td>\n      <td>1069</td>\n      <td>1025</td>\n      <td>2.5991</td>\n      <td>5.4130</td>\n      <td>-2.8139</td>\n      <td>-0.3186</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>2011</td>\n      <td>1387</td>\n      <td>983</td>\n      <td>1.5468</td>\n      <td>2.3853</td>\n      <td>-0.8386</td>\n      <td>-0.1881</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>2012</td>\n      <td>1736</td>\n      <td>796</td>\n      <td>1.4306</td>\n      <td>2.5759</td>\n      <td>-1.1453</td>\n      <td>-0.2554</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>2013</td>\n      <td>1857</td>\n      <td>656</td>\n      <td>1.7662</td>\n      <td>2.8644</td>\n      <td>-1.0981</td>\n      <td>-0.2100</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>2014</td>\n      <td>1936</td>\n      <td>617</td>\n      <td>2.0459</td>\n      <td>4.6196</td>\n      <td>-2.5738</td>\n      <td>-0.3537</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>2015</td>\n      <td>2037</td>\n      <td>697</td>\n      <td>3.4264</td>\n      <td>6.7271</td>\n      <td>-3.3007</td>\n      <td>-0.2930</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>2016</td>\n      <td>2080</td>\n      <td>924</td>\n      <td>2.6078</td>\n      <td>4.2670</td>\n      <td>-1.6592</td>\n      <td>-0.2139</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>2017</td>\n      <td>2582</td>\n      <td>839</td>\n      <td>2.0386</td>\n      <td>3.0191</td>\n      <td>-0.9805</td>\n      <td>-0.1705</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>2018</td>\n      <td>2937</td>\n      <td>718</td>\n      <td>1.3863</td>\n      <td>2.0359</td>\n      <td>-0.6495</td>\n      <td>-0.1669</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>2019</td>\n      <td>2799</td>\n      <td>1042</td>\n      <td>1.7314</td>\n      <td>2.2075</td>\n      <td>-0.4761</td>\n      <td>-0.1055</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>2020</td>\n      <td>2914</td>\n      <td>1342</td>\n      <td>2.1411</td>\n      <td>2.2787</td>\n      <td>-0.1376</td>\n      <td>-0.0270</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>2021</td>\n      <td>3258</td>\n      <td>1429</td>\n      <td>2.3111</td>\n      <td>2.4866</td>\n      <td>-0.1755</td>\n      <td>-0.0318</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "     trade_date     on     1w     2w     1m      3m      6m      9m      1y\n0      20140102  3.131  4.981  5.759  5.910  5.5657  4.9306  4.9501  4.9677\n1      20140103  3.006  4.711  5.524  6.201  5.5661  4.9389  4.9582  4.9757\n2      20140106  2.920  4.633  5.433  6.475  5.5732  4.9476  4.9660  4.9824\n3      20140107  2.875  4.259  5.074  5.925  5.5760  4.9547  4.9713  4.9869\n4      20140108  2.830  4.126  4.927  5.650  5.5821  4.9585  4.9742  4.9904\n...         ...    ...    ...    ...    ...     ...     ...     ...     ...\n2220   20221226  0.820  1.961  3.039  2.306  2.4050  2.4940  2.5500  2.6230\n2221   20221227  0.632  2.004  3.084  2.321  2.4110  2.4980  2.5540  2.6200\n2222   20221228  0.522  2.019  3.190  2.332  2.4160  2.5040  2.5580  2.6200\n2223   20221229  0.441  2.261  3.165  2.340  2.4180  2.5050  2.5610  2.6190\n2224   20221230  1.957  2.223  3.145  2.346  2.4220  2.5080  2.5650  2.6190\n\n[2225 rows x 9 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>trade_date</th>\n      <th>on</th>\n      <th>1w</th>\n      <th>2w</th>\n      <th>1m</th>\n      <th>3m</th>\n      <th>6m</th>\n      <th>9m</th>\n      <th>1y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>20140102</td>\n      <td>3.131</td>\n      <td>4.981</td>\n      <td>5.759</td>\n      <td>5.910</td>\n      <td>5.5657</td>\n      <td>4.9306</td>\n      <td>4.9501</td>\n      <td>4.9677</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>20140103</td>\n      <td>3.006</td>\n      <td>4.711</td>\n      <td>5.524</td>\n      <td>6.201</td>\n      <td>5.5661</td>\n      <td>4.9389</td>\n      <td>4.9582</td>\n      <td>4.9757</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20140106</td>\n      <td>2.920</td>\n      <td>4.633</td>\n      <td>5.433</td>\n      <td>6.475</td>\n      <td>5.5732</td>\n      <td>4.9476</td>\n      <td>4.9660</td>\n      <td>4.9824</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>20140107</td>\n      <td>2.875</td>\n      <td>4.259</td>\n      <td>5.074</td>\n      <td>5.925</td>\n      <td>5.5760</td>\n      <td>4.9547</td>\n      <td>4.9713</td>\n      <td>4.9869</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>20140108</td>\n      <td>2.830</td>\n      <td>4.126</td>\n      <td>4.927</td>\n      <td>5.650</td>\n      <td>5.5821</td>\n      <td>4.9585</td>\n      <td>4.9742</td>\n      <td>4.9904</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2220</th>\n      <td>20221226</td>\n      <td>0.820</td>\n      <td>1.961</td>\n      <td>3.039</td>\n      <td>2.306</td>\n      <td>2.4050</td>\n      <td>2.4940</td>\n      <td>2.5500</td>\n      <td>2.6230</td>\n    </tr>\n    <tr>\n      <th>2221</th>\n      <td>20221227</td>\n      <td>0.632</td>\n      <td>2.004</td>\n      <td>3.084</td>\n      <td>2.321</td>\n      <td>2.4110</td>\n      <td>2.4980</td>\n      <td>2.5540</td>\n      <td>2.6200</td>\n    </tr>\n    <tr>\n      <th>2222</th>\n      <td>20221228</td>\n      <td>0.522</td>\n      <td>2.019</td>\n      <td>3.190</td>\n      <td>2.332</td>\n      <td>2.4160</td>\n      <td>2.5040</td>\n      <td>2.5580</td>\n      <td>2.6200</td>\n    </tr>\n    <tr>\n      <th>2223</th>\n      <td>20221229</td>\n      <td>0.441</td>\n      <td>2.261</td>\n      <td>3.165</td>\n      <td>2.340</td>\n      <td>2.4180</td>\n      <td>2.5050</td>\n      <td>2.5610</td>\n      <td>2.6190</td>\n    </tr>\n    <tr>\n      <th>2224</th>\n      <td>20221230</td>\n      <td>1.957</td>\n      <td>2.223</td>\n      <td>3.145</td>\n      <td>2.346</td>\n      <td>2.4220</td>\n      <td>2.5080</td>\n      <td>2.5650</td>\n      <td>2.6190</td>\n    </tr>\n  </tbody>\n</table>\n<p>2225 rows × 9 columns</p>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cudf.read_csv('/data/DataSets/BW_INDEX_CSMAR/BW_5_CSMAR/QX_DIVIDENDPREMIUM.csv')"
+    "from loader.findata_loader import TuShare\n",
+    "\n",
+    "tu = TuShare()\n",
+    "df_shibor = pd.concat(\n",
+    "        [tu.PRO_API.shibor(start_date='20140101', end_date='20220101'), tu.PRO_API.shibor(start_date='20220102', end_date='20221231')])\n",
+    "df_shibor = df_shibor.rename(columns={'date': 'trade_date'}).set_index('trade_date').sort_index().reset_index()\n",
+    "df_shibor.to_parquet('/home/ubuntu/notebooks/DataSets/MACRO_DATA/SHIBOR_TS_2014_2022.parquet')\n",
+    "df_shibor"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 分析师情绪"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "      trade_date   img_neg   tex_neg\n0       20140102  0.000000  0.000000\n1       20140103  0.000000  0.333333\n2       20140106  0.285714  0.142857\n3       20140107  0.000000  0.333333\n4       20140108  0.333333  0.000000\n...          ...       ...       ...\n2059    20220621  0.238095  0.285714\n2060    20220622  0.227273  0.227273\n2061    20220623  0.363636  0.363636\n2062    20220624  0.200000  0.300000\n2063    20220627  0.200000  0.133333\n\n[2064 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>trade_date</th>\n      <th>img_neg</th>\n      <th>tex_neg</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>20140102</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>20140103</td>\n      <td>0.000000</td>\n      <td>0.333333</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20140106</td>\n      <td>0.285714</td>\n      <td>0.142857</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>20140107</td>\n      <td>0.000000</td>\n      <td>0.333333</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>20140108</td>\n      <td>0.333333</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2059</th>\n      <td>20220621</td>\n      <td>0.238095</td>\n      <td>0.285714</td>\n    </tr>\n    <tr>\n      <th>2060</th>\n      <td>20220622</td>\n      <td>0.227273</td>\n      <td>0.227273</td>\n    </tr>\n    <tr>\n      <th>2061</th>\n      <td>20220623</td>\n      <td>0.363636</td>\n      <td>0.363636</td>\n    </tr>\n    <tr>\n      <th>2062</th>\n      <td>20220624</td>\n      <td>0.200000</td>\n      <td>0.300000</td>\n    </tr>\n    <tr>\n      <th>2063</th>\n      <td>20220627</td>\n      <td>0.200000</td>\n      <td>0.133333</td>\n    </tr>\n  </tbody>\n</table>\n<p>2064 rows × 3 columns</p>\n</div>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_wc = cudf.read_parquet('/home/ubuntu/notebooks/DataSets/investor_sentiment/WC_SNET_NEG.parquet').rename(\n",
+    "        columns={'img_neg_index': 'img_neg', 'tex_neg_index': 'tex_neg'})\n",
+    "df_wc.to_parquet('/home/ubuntu/notebooks/DataSets/WC_SENT/WC_SENT_2014_2021.parquet')\n",
+    "df_wc"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
