--- a/notebooks/IS-Analyst.ipynb
+++ b/notebooks/IS-Analyst.ipynb
@@ -319,7 +319,7 @@
     "\n",
     "\n",
     "df_analyst = cal_analyst_sentiment_tdate()\n",
-    "df_analyst.set_index(['trade_date', 'ts_code'])"
+    "df_analyst.set_index(['trade_date', 'ts_code'])\n"
    ],
    "metadata": {
     "collapsed": false
@@ -671,7 +671,7 @@
       "> \" \"000906.SH\" \"000985.SH\")\n",
       "\n",
       "{\\rtf1\\ansi\\deff0 {\\fonttbl\\f0\\fnil Times New Roman;}\n",
-      "{\\info {\\author .}{\\company .}{\\title .}{\\creatim\\yr2023\\mo1\\dy30\\hr15\\min51}}\n",
+      "{\\info {\\author .}{\\company .}{\\title .}{\\creatim\\yr2023\\mo1\\dy30\\hr16\\min41}}\n",
       "\\deflang1033\\plain\\fs24\n",
       "{\\footer\\pard\\qc\\plain\\f0\\fs24\\chpgn\\par}\n",
       "{\\pard\\keepn\\ql Table MediaSent to AnalystSent Text\\par}\n",
@@ -900,7 +900,7 @@
       "> \" \"000906.SH\" \"000985.SH\")\n",
       "\n",
       "{\\rtf1\\ansi\\deff0 {\\fonttbl\\f0\\fnil Times New Roman;}\n",
-      "{\\info {\\author .}{\\company .}{\\title .}{\\creatim\\yr2023\\mo1\\dy30\\hr15\\min51}}\n",
+      "{\\info {\\author .}{\\company .}{\\title .}{\\creatim\\yr2023\\mo1\\dy30\\hr16\\min41}}\n",
       "\\deflang1033\\plain\\fs24\n",
       "{\\footer\\pard\\qc\\plain\\f0\\fs24\\chpgn\\par}\n",
       "{\\pard\\keepn\\ql Table MediaSent to AnalystSent Img\\par}\n",
