--- a/notebooks/IS-Investor.ipynb
+++ b/notebooks/IS-Investor.ipynb
@@ -68,7 +68,7 @@
     "from utils.sql import DB\n",
     "\n",
     "# Stata\n",
-    "from pystata import config  # noqa\n",
+    "from pystata import config\n",
     "\n",
     "config.init('mp')\n",
     "# ------------------------------数据集路径----------------------------------#\n",
@@ -135,6 +135,7 @@
     "\n",
     "    # 时间序列\n",
     "    df_select = df_select.groupby(['p_date', ], as_index=False).first()\n",
+    "    \n",
     "    # 筛选\n",
     "    return cudf.from_pandas(df_select[['p_date', 'img_neg', 'tex_neg']]).set_index('p_date').sort_index().reset_index()\n",
     "\n",
