--- a/notebooks/IS-Media.ipynb
+++ b/notebooks/IS-Media.ipynb
@@ -64,7 +64,7 @@
     "sys.path.append('/usr/local/stata17/utilities')\n",
     "\n",
     "# 多核 groupby Apply\n",
-    "from pandarallel import pandarallel\n",
+    "# from pandarallel import pandarallel\n",
     "\n",
     "# 数据库\n",
     "from utils.sql import DB\n",
@@ -72,8 +72,8 @@
     "from loader.findata_loader import Loader\n",
     "\n",
     "# 统计工具\n",
-    "from statsmodels.regression.rolling import RollingOLS  #滚动回归\n",
-    "from statsmodels.regression.linear_model import OLS  #OLS回归\n",
+    "# from statsmodels.regression.rolling import RollingOLS  #滚动回归\n",
+    "# from statsmodels.regression.linear_model import OLS  #OLS回归\n",
     "# Stata\n",
     "from pystata import config\n",
     "\n",
@@ -470,8 +470,7 @@
     "\n",
     "# 处理好的用于回归的数据\n",
     "df_series_ols = add_dummy_column(add_square_column(df_time_join).reset_index(), 'trade_date')\n",
-    "df_series_ols\n",
-    "# @formatter:off"
+    "df_series_ols\n"
    ],
    "metadata": {
     "collapsed": false
@@ -498,7 +497,19 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# @formatter:off"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "%%stata -d df_series_ols -force\n",
+    "/*{*/\n",
     "//描述性统计\n",
     "logout, save(Outputs/Table_Sum)  replace: ///\n",
     "tabstat *_neg idx_* *_high *_low, s(N sd mean p50 min max ) f(%12.4f) c(s)"
@@ -522,6 +533,7 @@
    "outputs": [],
    "source": [
     "%%stata -d df_series_ols -force -nogr\n",
+    "\n",
     "//时间设定\n",
     "ge time = _n\n",
     "tsset time\n",
@@ -529,8 +541,8 @@
     "\n",
     "//VAR回归\n",
     "foreach var in idx_000001 idx_000300 idx_000016 idx_399300    {\n",
-    "    rename(`var' `var'_s) (return return_s)\n",
     "\n",
+    "    rename(`var' `var'_s) (return return_s)\n",
     "    eststo: qui var return img_neg return_s, lags(1/5) exog(month_* weekday_*)\n",
     "    estadd local Month \"Yes\", replace\n",
     "    estadd local Weekday \"Yes\", replace\n",
@@ -543,7 +555,7 @@
     "\n",
     "    rename(return return_s) (`var' `var'_s)\n",
     "}\n",
-    "\n",
+    "/*{*/\n",
     "//输出\n",
     "esttab , keep(return:L*.img_neg) ///\n",
     "star(* 0.1 ** 0.05 *** 0.01) ///\n",
@@ -591,6 +603,7 @@
    "outputs": [],
    "source": [
     "%%stata -d df_series_ols -force\n",
+    "\n",
     "//时间设定\n",
     "ge time = _n\n",
     "tsset time\n",
