--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -274,6 +274,7 @@
     "# @formatter:off\n",
     "%load_ext tensorboard\n",
     "%tensorboard --logdir {LOG_DIR} --port 6006 --bind_all\n",
+    "# tensorboard --logdir /data/Models/TWITTER_SENT_2015/logs/hparam_tuning/20230110-172807 --port 6006 --bind_all\n",
     "# @formatter:on"
    ]
   },
